--- a/projects/editor/src/lib/home/home.component.html
+++ b/projects/editor/src/lib/home/home.component.html
@@ -25,6 +25,13 @@
 </mat-tab-group>
 
 <div
+    class="logo"
+    *ngIf="(forms$ | async).length > 0"
+>
+    Formly Editor
+</div>
+
+<div
     class="action-buttons"
     *ngIf="(forms$ | async).length > 0"
 >
