--- a/projects/editor/src/lib/property/boolean-property/boolean-property.component.html
+++ b/projects/editor/src/lib/property/boolean-property/boolean-property.component.html
@@ -23,9 +23,27 @@
 </editor-tree-item>
 
 <ng-template #simplifiedView>
-    <mat-checkbox [formControl]="formControl">
-        {{ property.name ? property.name : property.key }}
-    </mat-checkbox>
+    <div class="simplified-wrapper">
+        <span
+            *ngIf="isOverrideMode && isOverridden"
+            class="override-indicator"
+            [class.overriden]="isOverridden"
+        ></span>
+        <mat-checkbox
+            class="simple-checkbox"
+            [formControl]="formControl"
+        >
+            {{ property.name ? property.name : property.key }}
+        </mat-checkbox>
+        <button
+            *ngIf="isOverrideMode && isOverridden"
+            class="override-clear-btn"
+            mat-icon-button
+            (click)="onClearOverride()"
+        >
+            <mat-icon>clear</mat-icon>
+        </button>
+    </div>
 </ng-template>
 
 <mat-menu #optionsMenu="matMenu">
