--- a/projects/editor/src/lib/property/input-property/input-property.component.scss
+++ b/projects/editor/src/lib/property/input-property/input-property.component.scss
@@ -1,3 +1,17 @@
-mat-form-field.simplified {
+:host {
+    display: block;
+}
+
+.simplified-wrapper {
+    display: flex;
+    align-items: center;
+    column-gap: 4px;
+}
+
+.override-indicator {
+    height: 32px;
+}
+
+mat-form-field {
     width: 100%;
 }
