--- a/projects/editor/src/lib/property/object-array-properties/object-property.component.html
+++ b/projects/editor/src/lib/property/object-array-properties/object-property.component.html
@@ -39,102 +39,102 @@
                 <span>Add</span>
             </button>
         </div>
-        <button
-            *ngIf="property?.isRemovable"
-            mat-icon-button
-            color="warn"
-            (click)="remove.emit()"
-        >
-            <mat-icon>remove</mat-icon>
-        </button>
     </div>
 </ng-template>
 
 <ng-template #childPropertiesView>
-    <ng-container *ngFor="let child of childProperties; let i = index; trackBy: trackPropertyByKey">
-        <ng-container *ngIf="isSimplified ? child.isSimple : true">
-            <ng-container [ngSwitch]="child.type">
-                <editor-array-property
-                    *ngSwitchCase="typeofProperty.ARRAY"
-                    [treeLevel]="childrenTreeLevel"
-                    [path]="getChildPath(child.key)"
-                    [target]="target"
-                    [property]="propertyService.getAsArrayProperty(child)"
-                    [isSimplified]="isSimplified"
-                    (remove)="onRemoveChild(i)"
-                    (targetChanged)="targetChanged.emit($event)"
-                >
-                </editor-array-property>
-
-                <editor-object-property
-                    *ngSwitchCase="typeofProperty.OBJECT"
-                    [treeLevel]="childrenTreeLevel"
-                    [path]="getChildPath(child.key)"
-                    [target]="target"
-                    [property]="propertyService.getAsObjectProperty(child)"
-                    [isSimplified]="isSimplified"
-                    (remove)="onRemoveChild(i)"
-                    (targetChanged)="targetChanged.emit($event)"
-                >
-                </editor-object-property>
-
-                <editor-boolean-property
-                    *ngSwitchCase="typeofProperty.BOOLEAN"
-                    [treeLevel]="childrenTreeLevel"
-                    [path]="getChildPath(child.key)"
-                    [property]="child"
-                    [target]="target"
-                    [isSimplified]="isSimplified"
-                    (remove)="onRemoveChild(i)"
-                    (targetChanged)="targetChanged.emit($event)"
-                >
-                </editor-boolean-property>
-
-                <editor-chip-list-property
-                    *ngSwitchCase="typeofProperty.CHIP_LIST"
-                    [treeLevel]="childrenTreeLevel"
-                    [path]="getChildPath(child.key)"
-                    [property]="propertyService.getAsChiplistProperty(child)"
-                    [target]="target"
-                    [isSimplified]="isSimplified"
-                    (remove)="onRemoveChild(i)"
-                    (targetChanged)="targetChanged.emit($event)"
-                >
-                </editor-chip-list-property>
-
-                <editor-textarea-property
-                    *ngSwitchCase="typeofProperty.TEXTAREA"
-                    [treeLevel]="childrenTreeLevel"
-                    [path]="getChildPath(child.key)"
-                    [property]="propertyService.getAsTextareaProperty(child)"
-                    [target]="target"
-                    [isSimplified]="isSimplified"
-                    (remove)="onRemoveChild(i)"
-                    (targetChanged)="targetChanged.emit($event)"
-                >
-                </editor-textarea-property>
-
-                <ng-container *ngSwitchCase="typeofProperty.NUMBER">
-                    <ng-container *ngTemplateOutlet="inputProperty"></ng-container>
-                </ng-container>
-                <ng-container *ngSwitchCase="typeofProperty.TEXT">
-                    <ng-container *ngTemplateOutlet="inputProperty"></ng-container>
-                </ng-container>
-                <ng-template #inputProperty>
-                    <editor-input-property
+    <div>
+        <ng-container *ngFor="let child of childProperties; let i = index; trackBy: trackPropertyByKey">
+            <ng-container *ngIf="isSimplified ? child.isSimple : true">
+                <ng-container [ngSwitch]="child.type">
+                    <editor-array-property
+                        *ngSwitchCase="typeofProperty.ARRAY"
                         [treeLevel]="childrenTreeLevel"
                         [path]="getChildPath(child.key)"
-                        [property]="propertyService.getAsInputProperty(child)"
                         [target]="target"
+                        [property]="propertyService.getAsArrayProperty(child)"
                         [isSimplified]="isSimplified"
+                        [isOverrideMode]="isOverrideMode"
                         (remove)="onRemoveChild(i)"
                         (targetChanged)="targetChanged.emit($event)"
                     >
-                    </editor-input-property>
-                </ng-template>
+                    </editor-array-property>
+
+                    <editor-object-property
+                        *ngSwitchCase="typeofProperty.OBJECT"
+                        [treeLevel]="childrenTreeLevel"
+                        [path]="getChildPath(child.key)"
+                        [target]="target"
+                        [property]="propertyService.getAsObjectProperty(child)"
+                        [isSimplified]="isSimplified"
+                        [isOverrideMode]="isOverrideMode"
+                        (remove)="onRemoveChild(i)"
+                        (targetChanged)="targetChanged.emit($event)"
+                    >
+                    </editor-object-property>
+
+                    <editor-boolean-property
+                        *ngSwitchCase="typeofProperty.BOOLEAN"
+                        [treeLevel]="childrenTreeLevel"
+                        [path]="getChildPath(child.key)"
+                        [property]="child"
+                        [target]="target"
+                        [isSimplified]="isSimplified"
+                        [isOverrideMode]="isOverrideMode"
+                        (remove)="onRemoveChild(i)"
+                        (targetChanged)="targetChanged.emit($event)"
+                    >
+                    </editor-boolean-property>
+
+                    <editor-chip-list-property
+                        *ngSwitchCase="typeofProperty.CHIP_LIST"
+                        [treeLevel]="childrenTreeLevel"
+                        [path]="getChildPath(child.key)"
+                        [property]="propertyService.getAsChiplistProperty(child)"
+                        [target]="target"
+                        [isSimplified]="isSimplified"
+                        [isOverrideMode]="isOverrideMode"
+                        (remove)="onRemoveChild(i)"
+                        (targetChanged)="targetChanged.emit($event)"
+                    >
+                    </editor-chip-list-property>
+
+                    <editor-textarea-property
+                        *ngSwitchCase="typeofProperty.TEXTAREA"
+                        [treeLevel]="childrenTreeLevel"
+                        [path]="getChildPath(child.key)"
+                        [property]="propertyService.getAsTextareaProperty(child)"
+                        [target]="target"
+                        [isSimplified]="isSimplified"
+                        [isOverrideMode]="isOverrideMode"
+                        (remove)="onRemoveChild(i)"
+                        (targetChanged)="targetChanged.emit($event)"
+                    >
+                    </editor-textarea-property>
+
+                    <ng-container *ngSwitchCase="typeofProperty.NUMBER">
+                        <ng-container *ngTemplateOutlet="inputProperty"></ng-container>
+                    </ng-container>
+                    <ng-container *ngSwitchCase="typeofProperty.TEXT">
+                        <ng-container *ngTemplateOutlet="inputProperty"></ng-container>
+                    </ng-container>
+                    <ng-template #inputProperty>
+                        <editor-input-property
+                            [treeLevel]="childrenTreeLevel"
+                            [path]="getChildPath(child.key)"
+                            [property]="propertyService.getAsInputProperty(child)"
+                            [target]="target"
+                            [isSimplified]="isSimplified"
+                            [isOverrideMode]="isOverrideMode"
+                            (remove)="onRemoveChild(i)"
+                            (targetChanged)="targetChanged.emit($event)"
+                        >
+                        </editor-input-property>
+                    </ng-template>
+                </ng-container>
             </ng-container>
         </ng-container>
-    </ng-container>
+    </div>
 </ng-template>
 
 <mat-menu #optionsMenu="matMenu">
