--- a/projects/editor/src/lib/form/toolbar/toolbar.component.scss
+++ b/projects/editor/src/lib/form/toolbar/toolbar.component.scss
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 0 16px;
     box-sizing: border-box;
-    border-bottom: 1px solid rgba(0,0,0,.12);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 :host::ng-deep .mat-button-toggle-label-content {
